# baby

./: .env.example  .gitignore  BABY_PROJECT_PLAN.md  CHANGELOG.md  DECISIONS.md  DEMO.md  NIM_MIGRATION_PLAN.md  README.md  config.yaml  pyproject.toml  run.py
bench_results/: E2E_REPORT.md  REPORT.md  meta__llama-4-maverick-17b-128e-instruct.json  minimaxai__minimax-m2.7.json  mistralai__mistral-nemotron.json  moonshotai__kimi-k2.6.json  nvidia__nemotron-3-super-120b-a12b.json  qwen__qwen3.5-122b-a10b.json  z-ai__glm-5.2.json
bench_results/openrouter/: REPORT.md  deepseek__deepseek-chat-v3.1.json  meta-llama__llama-3.3-70b-instruct.json  minimax__minimax-m2.7.json  openai__gpt-4o-mini.json  qwen__qwen3-32b.json
bench_results/transcripts/: meta__llama-4-maverick-17b-128e-instruct__T1__run1.txt  meta__llama-4-maverick-17b-128e-instruct__T1__run2.txt  meta__llama-4-maverick-17b-128e-instruct__T1__run3.txt  meta__llama-4-maverick-17b-128e-instruct__T1__run4.txt  meta__llama-4-maverick-17b-128e-instruct__T1__run5.txt  meta__llama-4-maverick-17b-128e-instruct__T2__run1.txt  meta__llama-4-maverick-17b-128e-instruct__T2__run2.txt  meta__llama-4-maverick-17b-128e-instruct__T2__run3.txt  meta__llama-4-maverick-17b-128e-instruct__T2__run4.txt  meta__llama-4-maverick-17b-128e-instruct__T2__run5.txt  meta__llama-4-maverick-17b-128e-instruct__T3__run1.txt  meta__llama-4-maverick-17b-128e-instruct__T3__run2.txt  meta__llama-4-maverick-17b-128e-instruct__T3__run3.txt  meta__llama-4-maverick-17b-128e-instruct__T3__run4.txt  meta__llama-4-maverick-17b-128e-instruct__T3__run5.txt  meta__llama-4-maverick-17b-128e-instruct__T4__run1.txt  meta__llama-4-maverick-17b-128e-instruct__T4__run2.txt  meta__llama-4-maverick-17b-128e-instruct__T4__run3.txt  meta__llama-4-maverick-17b-128e-instruct__T4__run4.txt  meta__llama-4-maverick-17b-128e-instruct__T4__run5.txt  meta__llama-4-maverick-17b-128e-instruct__T5__run1.txt  meta__llama-4-maverick-17b-128e-instruct__T5__run2.txt  meta__llama-4-maverick-17b-128e-instruct__T5__run3.txt  meta__llama-4-maverick-17b-128e-instruct__T5__run4.txt  meta__llama-4-maverick-17b-128e-instruct__T5__run5.txt  meta__llama-4-maverick-17b-128e-instruct__T6__run1.txt  meta__llama-4-maverick-17b-128e-instruct__T6__run2.txt  meta__llama-4-maverick-17b-128e-instruct__T6__run3.txt  (+277 more)
clients/: cli.py  telegram_bot.py
core/: agent.py  bus.py  context.py  health.py  intents.py  manifest.py  nodes.py  paths.py  prompts.py  provision.py  ratelimit.py  readiness.py  router.py  safety.py  vision.py
db/: database.py  schema.sql
docs/: TAILSCALE.md  V2_EXECUTION_PLAN.md
installer/: EULA.txt  config.default.yaml  first_run.ps1
memory/: __init__.py  embedder.py  extractor.py  store.py  summarizer.py
scripts/: autostart.ps1  backfill_fts.py  backfill_message_vectors.py  dev_app.ps1  dev_ui.ps1  e2e_regression.py  enroll_voice.py  enroll_voice_v2.py  migrate_v2_db.py  nim_smoke.py  pick_nim_model.py  setup.ps1  soak_report.py  speaker_report.py  stage_payload.ps1  wakeword_training.md
spike/: README.md  package-lock.json  package.json
spike/tauri/src-tauri/: Cargo.toml  tauri.conf.json
spike/tauri/src-tauri/capabilities/: default.json
spike/tauri/src-tauri/src/: main.rs
tests/: conftest.py  test_agent_loop.py  test_amplitude.py  test_bench.py  test_browser.py  test_bus.py  test_context_trim.py  test_conversations.py  test_db_hygiene.py  test_db_tasks.py  test_event_attribution.py  test_fresh_install_defaults.py  test_gemini_provider.py  test_graph_api.py  test_health.py  test_intents.py  test_loop_guard.py  test_manifest.py  test_memory.py  test_memory_v2.py  test_notify.py  test_nvidia_provider.py  test_orchestrator.py  test_paths.py  test_provider_usage.py  test_provision.py  test_readiness.py  test_registry.py  test_render_governor.py  test_router.py  test_router_v2.py  test_safety.py  test_scheduler.py  test_search.py  test_sensors.py  test_session_trust.py  test_setup.py  test_shell_tray.py  test_soak_report.py  test_speaker.py  (+10 more)
tools/: __init__.py  _everything.py  apps.py  browser.py  clock.py  files.py  game.py  memory_tools.py  projects.py  registry.py  screen.py  sensors.py  shell.py  system_stats.py  tasks.py  web.py
ui/: gamewatch.py  server.py  tray.py
ui/shell/src-tauri/: Cargo.toml  tauri.conf.json
ui/shell/src-tauri/capabilities/: default.json
ui/shell/src-tauri/icons/: icon.icns
ui/shell/src-tauri/src/: main.rs
voice/: __init__.py  amplitude.py  audio_io.py  hotkey.py  pipeline.py  readycue.py  speaker.py  stt.py  tts.py  vad.py  wakeword.py
workers/: __init__.py  notify.py  orchestrator.py  queue.py  scheduler.py
(+340 files in other folders)
