[project]
name = "baby"
version = "0.1.0"
description = "Baby — local-first personal AI assistant for Windows 11"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.60",
    "aiosqlite>=0.20",
    "pyyaml>=6.0",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "psutil>=6.1",
    "nvidia-ml-py>=12.560",
    "ddgs>=9.0",
    "trafilatura>=2.0",
    "markitdown[pdf,docx]>=0.1.2",
    "winotify>=1.1",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
