[project]
name = "baby"
version = "0.1.0"
description = "Baby — local-first personal AI assistant for Windows 11"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.60",
    "aiosqlite>=0.20",
    "pyyaml>=6.0",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "psutil>=6.1",
    "nvidia-ml-py>=12.560",
    "ddgs>=9.0",
    "trafilatura>=2.0",
    "markitdown[pdf,docx]>=0.1.2",
    "winotify>=1.1",
    "sqlite-vec>=0.1.9,<0.2",
    "sentence-transformers>=5.6",
    "faster-whisper>=1.2.1",
    "onnxruntime>=1.20,<2",       # shared: openwakeword + kokoro-onnx
    "openwakeword>=0.6.0",
    "silero-vad>=6.2.1",          # adds torchaudio; torch CPU already present
    "kokoro-onnx>=0.5.0",         # official kokoro PyPI pins <3.13
    "sounddevice>=0.5.5",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "httpx2>=2.0",  # starlette TestClient backend; silences deprecation of httpx
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
