[package]
name = "baby-spike-tauri"
version = "0.0.0"
description = "V0 shell spike — Tauri wrapper. Throwaway."
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
