[package]
name = "baby-shell"
version = "0.1.0"
description = "Baby - native desktop shell (thin Tauri chrome over the FastAPI-served UI)"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# V0 keeps the dependency + capability surface minimal. The tray "tray-icon"
# feature and any process-spawn plumbing are added in V1 when their seams are wired
# (see src/main.rs). Backend spawn will be Rust-side std::process::Command, so no
# shell plugin / webview capability is ever exposed.
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
